Fix layout bugs on mobile and desktop

--- a/insureLandingPage/styles/main.css
+++ b/insureLandingPage/styles/main.css
@@ -35,9 +35,6 @@ body {
 h1,
 h2 {
   font-family: "DM Serif Display", serif;
-}
-
-h2 {
   font-weight: 400;
 }
 
@@ -136,19 +133,19 @@ a {
 
 .list__item:first-child {
   padding-top: 2rem;
-  animation: menuOpen 0.5s 0.5s forwards;
+  animation: menuOpen 0.3s 0.5s forwards;
 }
 
 .list__item:nth-child(2) {
-  animation: menuOpen 0.5s 0.9s forwards;
+  animation: menuOpen 0.3s 0.8s forwards;
 }
 
 .list__item:nth-child(3) {
-  animation: menuOpen 0.5s 1.1s forwards;
+  animation: menuOpen 0.3s 1.1s forwards;
 }
 
 .list__item:nth-child(4) {
-  animation: menuOpen 0.5s 1.3s forwards;
+  animation: menuOpen 0.3s 1.3s forwards;
 }
 
 .list__item:last-child {
@@ -193,6 +190,10 @@ a {
   padding: 0 2rem;
 }
 
+.intro__line {
+  display: none;
+}
+
 .intro__title {
   font-size: 2.5rem;
   letter-spacing: 2px;
@@ -223,6 +224,12 @@ a {
   background-image: url(../images/bg-pattern-intro-right-mobile.svg);
   background-repeat: no-repeat;
   background-position: top -9.5rem right;
+}
+
+.about__group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .about__line {
@@ -306,6 +313,9 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-bottom: 1px solid var(--gray001);
+  width: calc(100% - 2rem);
+  padding: 2rem;
 }
 
 .footer__social > img:not(:last-child) {
@@ -364,10 +374,18 @@ footer {
   }
 
   header,
+  .about__group,
   .about__title,
   .group {
     max-width: 1240px;
     margin: 0 auto;
+  }
+
+  header,
+  .container,
+  .about,
+  footer {
+    padding: 0 2rem;
   }
 
   nav {
@@ -443,13 +461,23 @@ footer {
     text-align: left;
     background-image: none;
     width: 38rem;
-    height: auto;
+    height: 22rem;
     align-items: flex-start;
+    padding: 0;
+  }
+
+  .intro__line {
+    display: block;
+    margin-bottom: 2rem;
+    width: 8rem;
+    height: 2px;
+    background-color: var(--gray001);
   }
 
   .intro__title {
     width: 16ch;
   }
+
   .hero {
     width: 35rem;
     height: 50rem;
@@ -464,12 +492,17 @@ footer {
   }
 
   .about {
-    padding-top: 20rem;
+    padding-top: 10rem;
     background-image: url(../images/bg-pattern-intro-left-desktop.svg);
     background-position: top -15rem left -2rem;
-    flex-direction: row;
     flex-wrap: wrap;
+    align-items: flex-start;
     justify-content: space-between;
+  }
+
+  .about__group {
+    width: 100%;
+    align-items: flex-start;
   }
 
   .about__title,
@@ -545,7 +578,7 @@ footer {
     justify-content: center;
     width: 100%;
     max-width: 1240px;
-    padding-bottom: 2rem;
+    padding: 2rem 0;
     border-bottom: 1px solid var(--gray002);
   }
 
